# simplove

./: .gitignore  README.md  data_simplove.json  db.sqlite3.bak  db.sqlite3.before-users-0002.bak  pyproject.toml
config/: settings.py  urls.py
core/: urls.py  views.py
core/templates/: index.html
fixtures/: data_simplove.json
matches/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
matches/migrations/: 0001_initial.py  0002_remove_evaluation_decided_at_and_more.py
matches/templates/: browse.html  index.html  matches_list.html
media/img/: accueil.jpg:Zone.Identifier
messages/: apps.py  urls.py  views.py
messaging/: apps.py  forms.py  models.py  urls.py  views.py
messaging/migrations/: 0001_initial.py
messaging/templates/: index.html  thread_detail.html  thread_list.html
profiles/: apps.py  decorators.py  forms.py  models.py  signals.py  storage_backends.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_memberprofile_age.py  0002_alter_memberprofile_user.py  0002_memberprofile_interests.py  0003_alter_memberprofile_user.py  0003_memberprofile_photo_alter_memberprofile_age_and_more.py  0004_remove_memberprofile_user_alter_memberprofile_age.py  0005_memberprofile_user.py  0006_alter_memberprofile_user.py  0007_alter_memberprofile_age.py  0007_memberprofile_photo.py  0008_alter_memberprofile_age.py  0008_alter_memberprofile_age_alter_memberprofile_photo.py
static/css/: style.css
templates/: base.html
users/: backends.py  forms.py  login.py  models.py  signals.py  urls.py  views.py
utils/: supabase_client.py
(+35 files in other folders)
