[tool.poetry]
name = "simplove"
version = "0.1.0"
description = ""
authors = ["samyachd <achd.samy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
django-bootstrap5 = "^25.2"
numpy = "^2.3.2"
requests = "^2.32.5"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.43"
python-decouple = "^3.8"
django-environ = "^0.12.0"
dj-database-url = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
