[tool.poetry]
name = "simplove"
version = "0.1.0"
description = ""
authors = ["samyachd <achd.samy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django-bootstrap5 = "^25.2"
numpy = "^2.3.2"
requests = "^2.32.5"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.43"
python-decouple = "^3.8"
django-environ = "^0.12.0"

dj-database-url = "^3.0.1"
pillow = "^11.3.0"
environ = "^1.0"
django = "^5.2.6"
gunicorn = "^23.0.0"
whitenoise = "^6.10.0"
supabase = "^2.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
